[project]
name = "hermes-ratchet-dashboard"
version = "0.1.0"
description = "Ratchet Mode dashboard plugin for Hermes Agent"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "pydantic>=2.0",
    "uvicorn>=0.29",
]

[project.optional-dependencies]
dev = ["httpx", "pytest", "ruff"]

[tool.ruff]
line-length = 100
target-version = "py310"
